# vkusvill-parser

./: .gitignore  BOT_SETUP.md  Dockerfile  LAVKA_IMPROVEMENTS.md  LICENSE  Makefile  QUICK_START.md  RAILWAY_SETUP.md  README.md  SCRAPE_ALL_UPDATE.md  TELEGRAM_BOT_README.md  address.py  api_server.py  bot_simple.py  config.yaml  docker-compose.yml  env-example.txt  lavka_scraper.py  main.py  moscow.py  moscow_address.py  moscow_improved.py  parsing_worker.py  pyproject.toml  quick_test.py  quick_verify.py  railway.toml  refill_data.py  requirements-dev.txt  requirements.txt  run.py  run_bot.py  run_telegram_bot.py  samokat_scraper.py  telegram_bot.py  test_debug_commands.py  test_improvements.py  test_pagination.py  test_parsers.py  test_playwright.py  (+11 more)
app/: __init__.py  __main__.py  cli.py  models.py
app/scrapers/: __init__.py  base.py  lavka.py  samokat.py  vkusvill.py
app/utils/: __init__.py  image_downloader.py  logger.py  normalizer.py  storage.py
data/: .gitkeep  moscow_address_1758309297.csv  moscow_address_1758309297.jsonl  moscow_heavy_1758308796.csv  moscow_heavy_1758308796.jsonl  moscow_improved_1758362624.csv  vv_500_plus.csv  vv_500_plus.jsonl  vv_expanded.csv  vv_full.csv  vv_full.jsonl  vv_full_500.csv  vv_full_500.jsonl  vv_test_fixed.csv  vv_test_improved.csv
scripts/: combine_all_data.py  debug_lavka.py  debug_lavka_real.py  debug_samokat.py  demo_scraper.py  extract_real_names.py  final_working_scraper.py  quick_test.py  run_scraper.py
src/: main.py  telegram_bot.py
src/sources/: __init__.py  base.py  lavka.py  lavka_fixed.py  lavka_old.py  samokat.py  vkusvill.py
src/utils/: __init__.py  image_downloader.py  logger.py  normalizer.py  storage.py
tests/: __init__.py  conftest.py  test_models.py  test_normalizer.py  test_storage.py
