[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ready-food-scraper"
version = "1.0.0"
description = "Web scraper for ready food from delivery services"
authors = [{name = "Ready Food Scraper", email = "scraper@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "fake-useragent>=1.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
ready-food-scraper = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
